[gd_scene load_steps=2 format=3 uid="uid://yk427ajkg7br"]

[ext_resource type="Script" path="res://scenes/menu/multiplayer/multiplayer_menu.gd" id="1_l3aet"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3aet")
metadata/_edit_horizontal_guides_ = [-24.0]

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 405.0
offset_right = 572.0
offset_bottom = 477.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 603.0
offset_top = 405.0
offset_right = 793.0
offset_bottom = 477.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 403.0
offset_top = 201.0
offset_right = 765.0
offset_bottom = 273.0
text = "Start Game"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 614.0
offset_right = 46.0
offset_bottom = 637.0
text = "network compression: COMPRESS_RANGE_CODER"

[node name="SetName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 307.0
offset_right = 734.0
offset_bottom = 379.0
placeholder_text = "Set name"
alignment = 1
max_length = 32
caret_blink = true
caret_blink_interval = 0.45

[node name="SetNetwork" type="Control" parent="."]
anchors_preset = 0
offset_left = 889.0
offset_top = 443.0
offset_right = 929.0
offset_bottom = 483.0

[node name="IPv4" type="Label" parent="SetNetwork"]
layout_mode = 0
offset_left = -95.0
offset_top = 74.0
offset_right = -55.0
offset_bottom = 97.0
text = "IPv4:"

[node name="SetIpv4" type="LineEdit" parent="SetNetwork"]
layout_mode = 0
offset_left = -48.0
offset_top = 63.0
offset_right = 152.0
offset_bottom = 112.0
placeholder_text = "change to host's IP"
alignment = 1
caret_blink = true
caret_blink_interval = 0.45

[node name="Porta" type="Label" parent="SetNetwork"]
layout_mode = 0
offset_left = -95.0
offset_top = 146.0
offset_right = -48.0
offset_bottom = 169.0
text = "Port:"

[node name="SetPort" type="LineEdit" parent="SetNetwork"]
layout_mode = 0
offset_left = -48.0
offset_top = 135.0
offset_right = 152.0
offset_bottom = 184.0
placeholder_text = "default: 8910"
alignment = 1
caret_blink = true
caret_blink_interval = 0.45

[node name="buttonIP" type="Button" parent="SetNetwork"]
layout_mode = 0
offset_left = 169.0
offset_top = 63.0
offset_right = 233.0
offset_bottom = 110.0
text = "set"

[node name="buttonPort" type="Button" parent="SetNetwork"]
layout_mode = 0
offset_left = 169.0
offset_top = 136.0
offset_right = 233.0
offset_bottom = 183.0
text = "set"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="SetNetwork/buttonIP" to="." method="_on_button_ip_button_down"]
[connection signal="button_down" from="SetNetwork/buttonPort" to="." method="_on_button_port_button_down"]
